--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
+        //"start": "nodemon app.js",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
